# EZannot

./: .gitignore  NOTICE.txt  README.md  pyproject.toml
.github/workflows/: python-publish.yml
EZannot/: __init__.py  __main__.py  analyzer.py  annotator.py  detector.py  gui.py  gui_annotating.py  gui_main.py  gui_processing.py  gui_training.py  tools.py
EZannot/detectron2/checkpoint/: catalog.py  detection_checkpoint.py
EZannot/detectron2/config/: __init__.py  config.py  instantiate.py  lazy.py
EZannot/detectron2/data/: benchmark.py  build.py  catalog.py  common.py  dataset_mapper.py  detection_utils.py
EZannot/detectron2/data/datasets/: builtin.py  cityscapes.py  cityscapes_panoptic.py  coco.py  coco_panoptic.py  lvis.py  pascal_voc.py
EZannot/detectron2/data/samplers/: distributed_sampler.py
EZannot/detectron2/data/transforms/: __init__.py  augmentation_impl.py
EZannot/detectron2/engine/: defaults.py  hooks.py  launch.py  train_loop.py
EZannot/detectron2/evaluation/: cityscapes_evaluation.py  coco_evaluation.py  evaluator.py  fast_eval_api.py  lvis_evaluation.py  panoptic_evaluation.py  pascal_voc_evaluation.py  rotated_coco_evaluation.py  sem_seg_evaluation.py
EZannot/detectron2/export/: api.py  c10.py  caffe2_modeling.py  caffe2_patch.py  flatten.py  torchscript.py  torchscript_patch.py
EZannot/detectron2/layers/: batch_norm.py  deform_conv.py  nms.py  roi_align_rotated.py  wrappers.py
EZannot/detectron2/model_zoo/: model_zoo.py
EZannot/detectron2/model_zoo/configs/COCO-InstanceSegmentation/: mask_rcnn_regnetx_4gf_dds_fpn_1x.py  mask_rcnn_regnety_4gf_dds_fpn_1x.py
EZannot/detectron2/modeling/: __init__.py  anchor_generator.py  box_regression.py  matcher.py  mmdet_wrapper.py  poolers.py  postprocessing.py  sampling.py  test_time_augmentation.py
EZannot/detectron2/modeling/backbone/: backbone.py  build.py  fpn.py  regnet.py  resnet.py  swin.py  vit.py
EZannot/detectron2/modeling/meta_arch/: build.py  dense_detector.py  fcos.py  panoptic_fpn.py  rcnn.py  retinanet.py  semantic_seg.py
EZannot/detectron2/modeling/proposal_generator/: build.py  proposal_utils.py  rpn.py  rrpn.py
EZannot/detectron2/modeling/roi_heads/: box_head.py  cascade_rcnn.py  fast_rcnn.py  keypoint_head.py  mask_head.py  roi_heads.py  rotated_fast_rcnn.py
EZannot/detectron2/projects/: __init__.py
EZannot/detectron2/projects/deeplab/: build_solver.py  lr_scheduler.py  resnet.py  semantic_seg.py
EZannot/detectron2/projects/panoptic_deeplab/: config.py  dataset_mapper.py  panoptic_seg.py
EZannot/detectron2/projects/point_rend/: config.py  mask_head.py  point_features.py  point_head.py  roi_heads.py  semantic_seg.py
EZannot/detectron2/solver/: build.py
EZannot/detectron2/structures/: __init__.py  image_list.py  masks.py  rotated_boxes.py
EZannot/detectron2/tracking/: base_tracker.py  bbox_iou_tracker.py  hungarian_tracker.py  iou_weighted_hungarian_bbox_iou_tracker.py  utils.py  vanilla_hungarian_bbox_iou_tracker.py
EZannot/detectron2/utils/: analysis.py  collect_env.py  env.py  events.py  logger.py  testing.py  tracing.py  video_visualizer.py  visualizer.py
EZannot/sam2/: automatic_mask_generator.py  benchmark.py  build_sam.py  sam2_image_predictor.py  sam2_video_predictor.py  sam2_video_predictor_legacy.py
EZannot/sam2/modeling/: memory_attention.py  memory_encoder.py  sam2_base.py  sam2_utils.py
EZannot/sam2/modeling/backbones/: hieradet.py
EZannot/sam2/modeling/sam/: mask_decoder.py  prompt_encoder.py  transformer.py
EZannot/sam2/utils/: transforms.py
Ezannot/: __main__.py  gui.py
SAM2 models/large/: sam2.1_hiera_l.yaml  sam2.1_hiera_large.pt
SAM2 models/tiny/: sam2.1_hiera_t.yaml  sam2.1_hiera_tiny.pt
(+18 files in other folders)
