[build-system]
requires=['pdm-backend']
build-backend='pdm.backend'

[project]
name='EZannot'
description='Annotate images with ease.'
authors=[{name='Yujia Hu',email='yujiahu415@gmail.com'}]
dependencies=[
	'numpy',
	'scipy',
	'opencv-python',
	'opencv-contrib-python',
	'pillow',
	'pandas',
	'wxPython',
	'packaging',
	'requests',
	'screeninfo',
	'torch',
	'torchvision',
	'torchaudio'
]
requires-python='>=3.11'
readme='README.md'
license={text='GPL-3.0'}
keywords=['Image annotation','AI-assisted annotation','Image augmentation']
classifiers=[
	'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
	'Operating System :: OS Independent',
	'Programming Language :: Python :: 3',
	'Programming Language :: Python :: 3 :: Only',
]
dynamic=['version']

[project.urls]
Homepage='https://github.com/yujiahu415/EZannot'

[project.scripts]
EZannot='EZannot.__main__:main'

[tool.pdm]
distribution=true

[tool.pdm.version]
source='file'
path='EZannot/__init__.py'

