[build-system]
requires=['pdm-backend']
build-backend='pdm.backend'

[project]
name='EZannot'
description='Annotate images and measure the annotated with ease.'
authors=[{name='Yujia Hu',email='yujiahu415@gmail.com'}]
dependencies=[
	'numpy>=1.24.4',
	'scipy',
	'scikit-image',
	'opencv-python',
	'opencv-contrib-python',
	'pillow>=9.4.0',
	'wxPython',
	'packaging',
	'requests',
	'screeninfo',
	'openpyxl',
	'pandas',
	'tifffile',
	'imagecodecs',
	'tqdm>=4.66.1',
	'hydra-core>=1.3.2',
	'iopath>=0.1.10',
	'torch>=2.5.1',
	'torchvision>=0.20.1',
	'torchaudio',
	'matplotlib',
	'pycocotools>=2.0.2',
	'termcolor>=1.1',
	'yacs>=0.1.8',
	'tabulate',
	'cloudpickle',
	'tensorboard',
	'fvcore>=0.1.5,<0.1.6',
	'iopath>=0.1.7',
	"dataclasses; python_version<'3.7'",
	'omegaconf>=2.1,<2.4',
	'black',
	'ninja',
	'six'
]
requires-python='>=3.10'
readme='README.md'
license={text='GPL-3.0'}
keywords=['Image annotation','Quantification of annotated objects','AI-assisted annotation','Image augmentation']
classifiers=[
	'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
	'Operating System :: OS Independent',
	'Programming Language :: Python :: 3',
	'Programming Language :: Python :: 3 :: Only',
	'Programming Language :: Python :: 3.10',
	'Programming Language :: Python :: 3.11',
	'Programming Language :: Python :: 3.12',
	'Programming Language :: Python :: 3.13',
]
dynamic=['version']

[project.urls]
Homepage='https://github.com/yujiahu415/EZannot'

[project.scripts]
EZannot='EZannot.__main__:main'

[tool.pdm]
distribution=true

[tool.pdm.version]
source='file'
path='EZannot/__init__.py'

